--- a/output.css
+++ b/output.css
@@ -46,12 +46,10 @@ p,
 }
 
 .bg-card-svg {
-  background-image: image("images/bg-pattern-quotation.svg");
-  background-repeat: no-repeat;
-  background-position: 80% 0;
-  margin-right: 15px;
-  margin-top: 15px;
-  grid-column: 6/6;
+  position: absolute;
+  z-index: -1;
+  left: 70%;
+  top: 0;
 }
 
 .card {
@@ -87,6 +85,8 @@ p,
 
 .card-1 {
   background-color: #7541c8;
+  position: relative;
+  z-index: -2;
 }
 
 .card-2 {
@@ -123,9 +123,14 @@ p,
   grid-column: 2/4;
 }
 
-@media screen and (min-width: 200px) {
+@media all and (min-width: 200px) {
   body {
     margin: 50px 20px;
+  }
+
+  .bg-card-svg {
+    position: absolute;
+    left: 55%;
   }
 
   .card {
@@ -140,13 +145,18 @@ p,
     grid-column: 2/4;
   }
 }
-@media screen and (min-width: 768px) {
+@media all and (min-width: 768px) {
   body {
     margin: 50px 20px;
   }
 
   h2 {
     font-size: medium;
+  }
+
+  .bg-card-svg {
+    position: absolute;
+    left: 70%;
   }
 
   .card {
@@ -164,8 +174,8 @@ p,
 
   .grid-container {
     display: grid;
-    grid-template: repeat(18, 50px)/repeat(18, 1fr);
-    grid-gap: 15px;
+    grid-template: repeat(18, 1fr)/repeat(18, 1fr);
+    grid-gap: 2px;
   }
 
   .Daniel {
@@ -213,10 +223,15 @@ p,
     margin: 5px;
   }
 
+  .bg-card-svg {
+    position: absolute;
+    left: 65%;
+  }
+
   .grid-container {
     display: grid;
-    grid-template: repeat(18, 50px)/repeat(18, 1fr);
-    grid-gap: 15px;
+    grid-template: repeat(18, 1fr)/repeat(18, 1fr);
+    grid-gap: 2px;
   }
 
   .Daniel {
@@ -270,8 +285,8 @@ p,
 
   .grid-container {
     display: grid;
-    grid-template: repeat(18, 50px)/repeat(14, 1fr);
-    grid-gap: 30px;
+    grid-template: repeat(18, 1fr)/repeat(14, 1fr);
+    grid-gap: 2px;
   }
 
   .Daniel {
